--- a/damn-vulnerable-defi/package.json
+++ b/damn-vulnerable-defi/package.json
@@ -39,6 +39,7 @@
     "ethers": "5.7.2",
     "hardhat": "2.12.4",
     "hardhat-dependency-compiler": "1.1.3",
+    "hardhat-storage-layout": "^0.1.7",
     "solady": "0.0.67",
     "solmate": "6.6.1"
   }
